# Linux

./: .gitignore  .vimrc  Bash scripting.md  fastgit  fastupdate
Customization/: File manager.md  Gnome.md  Grub.md  Terminal customization.md  rEFInd.md
Drivers/: "proc" drivers.md  Notes.md
Drivers/ldd/: Makefile  ldd.c  user-app.py
Gazebo Fortress/: CMakeLists.txt  Commands.md  Summary.md  building_robot.sdf  lidar_node.cc  sensor.sdf
Kernel/: Compile.md
Miscellaneous/: Bash scripting.md  Change desktop environment.md  Change file manager.md  Format usb device.md  Grub.md  Power saving.md  Startup app.md  Storage devices.md  Switching GPUs.md  Task manager.md  Terminal emulators.md
ROS/: Commands.md  ROS2 - Code.md  ROS2.md
ROS/ros2-esercizio-nodo/install/: local_setup.sh  setup.sh
ROS/ros2-esercizio-nodo/src/calculator/: CMakeLists.txt
ROS/ros2-esercizio-nodo/src/calculator/src/: node.cpp
ROS/ros2-samples/adder-correct/: CMakeLists.txt  package.xml
ROS/ros2-samples/adder-correct/src/: main.cpp  sum.cpp
ROS2/: ROS2 - Code.md  ROS2 - Notes.md  ROS2 - Package and build.md  ROS2 - Package.md  rqt.md
ROS2 Humble/: CLI.md  Miscellaneous.md  Packages.md  ROS2 (Humble) - Notes.md  ROS2 (Humble) - Package.md  rqt.md
ROS2/ros2-samples/: Notes.md
System/: Basic system utilities.md  Limit battery charge.md  Network.md  Power management.md  Storage devices.md  c++ issues.md  ppa.md  startup-script.md
System/Kernel/: Compile and install.md  contribute.md  documentation.md
nvim/: common.lua  init.lua
wezterm/: wezterm.lua
(+35 files in other folders)
